--- a/resources/assets/sass/layout/_news.scss
+++ b/resources/assets/sass/layout/_news.scss
@@ -7,7 +7,6 @@
 .news {
   width: 100%;
   margin: 0 auto;
-  overflow: hidden;
   white-space: nowrap;
   @include animation(marquee 50s linear infinite);
 }
